src/css/main.scss
@import "./partials/colors";
@import "./partials/shadows";
@import "./partials/card";
@import "./partials/timer";
@import "./partials/topBar";
@import "./partials/sessionLog";
@import "./partials/modal";
@import "./partials/inputOverrides";
@import "./partials/settings";
@import "./partials/remote";

html {
  height: 100vh;
  width: 100vw;
}

body {
  // font-family: "Roboto", sans-serif;
  font-family: "Montserrat", sans-serif;
  // background-color: $grey-minus-2;
  background: linear-gradient(
    135deg,
    $primary-plus-1 0%,
    $primary 50%,
    $primary-minus-1 100%
  );
  background-repeat: no-repeat;
  position: relative;
  height: 100%;
  width: 100%;
  margin: -1rem 0;
}

hr {
  border: 5px solid $gold;
  border-radius: 25rem 0 25rem 0;
  width: 90%;
}

.hide {
  display: none;
}

.no-scroll {
  overflow: hidden;
}

.title {
  justify-self: start;
  font-size: 3rem;
  font-weight: 800;
  margin: 0 0.2rem;
  color: $grey-plus-2;
}

input {
  outline-color: $primary;
}

